force-app/main/default/objects/Torc_Match_Shadow__c/Torc_Match_Shadow__c.object-meta.xml
<CustomObject>
    <label>Torc Match Shadow</label>
    <nameField>
        <displayFormat>TM-{00000000}</displayFormat>
        <label>Torc Match Shadow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torc Match Shadows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>