force-app/main/default/objects/Torc_Match_Shadow__c/fields/jobOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>jobOpportunityId__c</fullName>
    <label>jobOpportunityId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>