force-app/main/default/objects/Torc_Match_Shadow__c/fields/Matcher__c.field-meta.xml
<CustomField>
    <fullName>Matcher__c</fullName>
    <label>Matcher</label>
    <length>100</length>
    <type>Text</type>
</CustomField>