force-app/main/default/objects/Torc_Match_Shadow__c/fields/Matcher_Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Matcher_Torc_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matcher Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Torc Match Shadows</relationshipLabel>
    <relationshipName>Torc_Match_Shadows</relationshipName>
    <type>Lookup</type>
</CustomField>