force-app/main/default/objects/Torc_Match_Shadow__c/fields/Platform_Id__c.field-meta.xml
<CustomField>
    <fullName>Platform_Id__c</fullName>
    <label>Platform Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>