force-app/main/default/objects/Torc_Match_Shadow__c/fields/reasonForRejection__c.field-meta.xml
<CustomField>
    <fullName>reasonForRejection__c</fullName>
    <label>reasonForRejection</label>
    <type>TextArea</type>
</CustomField>