force-app/main/default/objects/Torc_Match_Shadow__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>