force-app/main/default/objects/Torc_Match_Shadow__c/fields/sync_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>sync_Request_Time__c</fullName>
    <label>sync Request Time</label>
    <type>DateTime</type>
</CustomField>